########################################################################################
#############               生成 des 库文件                            ############## 
########################################################################################
LIST (APPEND des_LIB_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/des.c
    )
    
    
########################################################################################
#############              添加头文件目录                                 ############## 
########################################################################################
include_directories(  
    ${PROJECT_SOURCE_DIR}/includes  
    ${PROJECT_SOURCE_DIR}/Utils/Crypto
    ${PROJECT_SOURCE_DIR}/Utils/Crypto/CryptoDES
)  


########################################################################################
#############               添加 链接库文件目录                           ############## 
########################################################################################
link_directories(  
    /usr/local/lib   
    )  

    
########################################################################################
#############           生成目标库文件 并 标明版本号                      ############## 
########################################################################################
IF (MODULE_des)
    #生成动态库  静态库则 STATIC  
    add_library (deslib SHARED      ${des_LIB_SRCS})  
    add_library (dess STATIC        ${des_LIB_SRCS})  
    # 设置版本号，SOVERSION为API版本号
    set_target_properties(deslib   PROPERTIES VERSION 1.0.0 SOVERSION 1 )
ELSE (MODULE_des)
    MESSAGE(STATUS "Not Include des module.")
ENDIF (MODULE_des)

