########################################################################################
#############               生成 md5c 库文件                            ############## 
########################################################################################
LIST (APPEND md5c_LIB_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/md5c.c
    )
    
    
########################################################################################
#############              添加头文件目录                                 ############## 
########################################################################################
include_directories(  
    ${PROJECT_SOURCE_DIR}/includes  
    ${PROJECT_SOURCE_DIR}/Utils/Crypto
    ${PROJECT_SOURCE_DIR}/Utils/Crypto/MD5
)  

########################################################################################
#############               添加 链接库文件目录                           ############## 
########################################################################################
link_directories(  
    /usr/local/lib   
    )  


    
########################################################################################
#############           生成目标库文件 并 标明版本号                      ############## 
########################################################################################
IF (MODULE_md5c)
    #生成动态库  静态库则 STATIC  
    add_library (md5clib SHARED      ${md5c_LIB_SRCS})  
    add_library (md5cs STATIC        ${md5c_LIB_SRCS})  
    # 设置版本号，SOVERSION为API版本号
    set_target_properties(md5clib   PROPERTIES VERSION 1.0.0 SOVERSION 1 )
ELSE (MODULE_md5c)
    MESSAGE(STATUS "Not Include md5c module.")
ENDIF (MODULE_md5c)


